fix: temporary permitAll for debugging 403